--- a/ui/index.html
+++ b/ui/index.html
@@ -15,12 +15,13 @@
     <body>
         <div id="testcomponent"></div>
         <!--
+        <script src="https://unpkg.com/core-js-bundle@3.6.5/minified.js"></script>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js" crossorigin></script>
         <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
         -->
         <!--Local Sources-->
-
+        <script src="/lib/core-js.min.js"></script>
         <script src="/lib/babel.min.js"></script>
         <script type="text/babel" src="/lib/react.production.min.js"></script>
         <script type="text/babel" src="/lib/react-dom.production.min.js"></script>
